# crud-project-ls22

./: Makefile  README.md  pyproject.toml
crud_project_ls22/: app.py
tests/: test_app.py
