[tool.poetry]
name = "crud-project-ls22"
version = "0.1.0"
description = ""
authors = ["Alexander Shangin <alarriva@yandex.ru>"]
readme = "README.md"
packages = [{include = "crud_project_ls22"}]

[tool.poetry.dependencies]
python = "^3.8.10"
flask = "^2.3.2"
requests = "^2.31.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
